# ConfigurationLoaderLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  create-new.cpp  default-block.cpp
include/: ConfigurationList.h  ConfigurationLoaderLib.h  PropertyBlock.h
lib/: ConfigurationLoaderLib_x64.lib
src/: ConfigurationList.cpp  PropertyBlock.cpp
src/ConfigurationLoaderLib/: ConfigurationList.cpp  ConfigurationLoaderLib.sln  ConfigurationLoaderLib.vcxproj  ConfigurationLoaderLib.vcxproj.filters
